@@ -13,6 +13,7 @@
  * fix: for _seek_magic.
  * fix: in --offset mode, avoiding probing for external loader programs.
  * fix: symbol from fbi sources clashed with gcc-6 onwards, breaking compilation.
+ * fix: short options -b, -h were not getting optional argument.
 
         	Version 0.3
 
